force-app/main/default/objects/Discounts__mdt/Discounts__mdt.object-meta.xml
<CustomObject>
    <description>For Factory Pattern</description>
    <label>Discounts</label>
    <pluralLabel>Discounts</pluralLabel>
</CustomObject>