force-app/main/default/objects/Discounts__mdt/fields/Class_To_Instantiate__c.field-meta.xml
<CustomField>
    <fullName>Class_To_Instantiate__c</fullName>
    <description>For Factory Pattern</description>
    <label>Class To Instantiate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>