force-app/main/default/objects/Discounts__mdt/fields/Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tier__c</fullName>
    <description
  >For Factory Pattern, we would probably want this as a picklist</description>
    <label>Customer Tier</label>
    <length>120</length>
    <type>Text</type>
</CustomField>