force-app/main/default/objects/Discounts__mdt/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description
  >For Factory Pattern, this prevents hardcoding the number in Apex</description>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>